[Bug #95738112] Fixes alignment problem for 'Get Updates' button

--- a/app/stylus/sections/footer.styl
+++ b/app/stylus/sections/footer.styl
@@ -54,6 +54,7 @@ $footer-height = 70px
       outline:none
       color:$colors-foreground-secondary
       background:$colors-foreground-primary
+      vertical-align: top
 
       &:hover
         opacity:0.6
